--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   material: ^1.0.0+2
 
   flutter_local_notifications: ^19.2.1
+  provider: ^6.1.5
 
   timezone: ^0.10.1
   permission_handler: ^12.0.0+1
