--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,16 +13,21 @@ dependencies:
 
   flutter_local_notifications: ^19.2.1
   provider: ^6.1.5
-
   timezone: ^0.10.1
   permission_handler: ^12.0.0+1
   flutter_heatmap_calendar: ^1.0.5
+  theme_provider: ^0.6.0
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-  very_good_analysis: ^7.0.0
+  very_good_analysis: ^8.0.0
+  build_runner: ^2.4.13
+  isar_generator: ^3.1.0+1
 
 flutter:
   uses-material-design: true
