--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,9 +20,10 @@ dependencies:
   isar: ^3.1.0+1
 
   isar_flutter_libs: ^3.1.0+1
-
+  chrono_dart: ^2.0.2
 
   path_provider: ^2.1.5
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
