AI message fead back on the added task status added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,12 +19,15 @@ dependencies:
   theme_provider: ^0.6.0
   isar: ^3.1.0+1
 
+  flutter_gemini: ^3.0.0
   isar_flutter_libs: ^3.1.0+1
   chrono_dart: ^2.0.2
 
   path_provider: ^2.1.5
   intl: ^0.20.2
   google_generative_ai: ^0.4.7
+  http: ^1.4.0
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
@@ -37,3 +40,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - .env
